--- a/dds/CMakeLists.txt
+++ b/dds/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(DCPS/RTPS)
 add_subdirectory(DCPS/transport)
 add_subdirectory(DCPS/InfoRepoDiscovery)
 add_subdirectory(DCPS/QOS_XML_Handler)
+add_subdirectory(DCPS/security)
 add_subdirectory(FACE)
 add_subdirectory(InfoRepo)
 add_subdirectory(monitor)
