disable security for wchar build

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_script:
       BUILD_FLAGS="$BUILD_FLAGS -DCMAKE_BUILD_TYPE=DEBUG";
     fi
   - if [ "$MATRIX_NAME" == "WChar" ]; then
-      BUILD_FLAGS="$BUILD_FLAGS -DACE_USES_WCHAR=ON";
+      BUILD_FLAGS="$BUILD_FLAGS -DACE_USES_WCHAR=ON -DOPENDDS_SECURITY=OFF";
     fi
   - if [ "$MATRIX_NAME" == "NoBit" ]; then
       DDS_BUILD_FLAGS="$DDS_BUILD_FLAGS -DOPENDDS_HAS_BUILT_IN_TOPICS=OFF";
